--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "sanity"
   ],
   "dependencies": {
-    "@sanity/vision": "^3.14.2",
+    "@sanity/scheduled-publishing": "^1.1.1",
+    "@sanity/vision": "^3.14.3",
     "capitalize": "^2.0.4",
     "date-fns": "^2.30.0",
     "get-video-id": "^3.6.5",
@@ -23,8 +24,9 @@
     "react-is": "^18.2.0",
     "react-vimeo": "^2.0.0",
     "react-youtube": "^10.1.0",
-    "sanity": "^3.14.2",
-    "styled-components": "^5.2.0"
+    "sanity": "^3.14.3",
+    "sanity-plugin-media": "^2.2.1",
+    "styled-components": "^6.0.5"
   },
   "devDependencies": {
     "@sanity/eslint-config-studio": "^2.0.4",
